<resources>
    <string name="app_name">Netflix 2 App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_string">Login</string>
    <string name="password_string">Password</string>
    <string name="email_string">Phone, email, or username</string>
    <string name="new_account_string">Register</string>
    <string name="navigation_drawer_open">open drawer navigation</string>
    <string name="navigation_drawer_close">close drawer navigation</string>
    <string name="username">username</string>
    <string name="twitter_for_professionals">Twitter for Professionals</string>
    <string name="monetization">Monetization</string>
    <string name="purchases">Purchases</string>
    <string name="moments">Moments</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="topics">Topics</string>
    <string name="lists">Lists</string>
    <string name="profile">Profile</string>
    <string name="customize_your_experience">Customize your experience</string>

    <string name="lets_others_find_your_twitter_account_by_n_your_phone_number">Lets others find your Twitter account by\n your phone number</string>
    <string name="for_more_details_about_these_settings_visit_the">For more details about these settings, visit the</string>
    <string name="next">Next</string>
    <string name="help_center_text">Help Center</string>
    <string name="connect_with_people_you_know">connect with people you know</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number_or_email_address_hint_text">Phone number or email address</string>
    <string name="name_hint_text">Name</string>
    <string name="date_of_birth_hint_text">Date of birth</string>
    <string name="by_signing_up_you_agree_to_our_text">By signing up, you agree to our</string>
    <string name="terms_text">Terms,</string>
    <string name="privacy_policy_text">Privacy Policy,</string>
    <string name="and_cookie_use_text">and Cookie Use.</string>
    <string name="home_tab_text">Home</string>
    <string name="bio_graph_text_profile">Bio graph</string>
    <string name="title_text_step1_login">To get started, first enter your \n phone, email, or @username</string>
    <string name="title_text_step2_login">Enter your password</string>
    <string name="title_text_register_step1">Create your account</string>

</resources>