<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registering.RegisterStep3Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font_title"
            android:gravity="center"
            android:text="Create your account"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/nameEditTextSignUp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/name_hint_text"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/phoneOrEmailEditTextSignUp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@null"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/phone_number_or_email_address_hint_text"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/dataOfBirthEditTextSignUp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@null"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/date_of_birth_hint_text"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_signing_up_you_agree_to_our_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_text"
                android:textColor="@color/text_link_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_text"
                android:textColor="@color/text_link_color" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/and_cookie_use_text"
            android:textColor="@color/text_link_color" />
    </LinearLayout>

    <Button
        android:id="@+id/singUp_Button"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:background="@drawable/enable_button_twitter"
        android:text="@string/sign_up"
        android:textColor="@color/next_text_button_customize_shape"
        android:textStyle="bold" />


</FrameLayout>