<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Registering.customizeAccountRegistering">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="26dp"
        android:paddingTop="26dp"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/font_title"
            android:text="@string/customize_your_experience"
            android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopTitle_H2_customize"
            android:fontFamily="@font/font_title"
            android:text="@string/connect_with_people_you_know"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopText_H2_customize"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_text"
                android:text="@string/lets_others_find_your_twitter_account_by_n_your_phone_number"

                android:textStyle="bold" />


            <com.polyak.iconswitch.IconSwitch
                android:id="@+id/iconSwitchId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                app:isw_active_tint_icon_left="@color/white"
                app:isw_active_tint_icon_right="@color/white"
                app:isw_icon_left="@drawable/ic_zero_num"
                app:isw_icon_right="@drawable/ic_one_num"
                app:isw_icon_size="15dp"
                app:isw_inactive_tint_icon_left="@color/white"
                app:isw_inactive_tint_icon_right="@color/white"
                app:isw_thumb_color_left="@color/white"
                app:isw_thumb_color_right="@color/white"


                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/marginTopHelpCenter_Text_Customize"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/for_more_details_about_these_settings_visit_the" />

            <TextView
                android:id="@+id/help_center_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/help_center_text"
                android:textColor="@color/link_help_center_color"
                android:textStyle="normal" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/buttonCustome"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_gravity="bottom|center"
        android:layout_margin="16dp"
        android:background="@drawable/next_button_customize_shape"
        android:text="@string/next"
        android:textColor="@color/next_text_button_customize_shape"
        android:textStyle="bold" />
</FrameLayout>