<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registering.RegisterStep1Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/titleOfFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/title_text_register_step1"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:alpha="1"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"


            app:layout_constraintTop_toBottomOf="@+id/titleOfFragment"
            app:layout_constraintVertical_bias="0.036">

            <AutoCompleteTextView
                android:id="@+id/emailRegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:layout_gravity="center"
                android:layout_marginBottom="10dp"

                android:background="@null"
                android:drawableRight="@drawable/ic_email"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/email_string"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />


            <AutoCompleteTextView
                android:id="@+id/numberRegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:drawableRight="@drawable/ic_phone"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="Phone"
                android:inputType="number"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_lock"
                android:ems="10"
                android:hint="@string/password_string"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"

                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/name_hint_text"
                    android:inputType="numberPassword"
                    android:paddingStart="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/loginPageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="Haven Account?"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>

        <Button
            android:id="@+id/registerStep1Button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="36dp"
            android:background="@drawable/disable_button_twitter"
            android:text="Next"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>